--- a/character.css
+++ b/character.css
@@ -29,7 +29,7 @@ body {
     grid-auto-flow: row;
     margin: 2vw;
     border-style: solid;
-    border-width: 3px 1px 3px 1px;
+    border-width: 3px 0.1vw 3px 0.1vw;
     border-top-color: #b0895a;
     border-bottom-color: #b0895a;
     background: rgba(176, 137, 90, .5);
@@ -74,7 +74,7 @@ input {
     grid-auto-flow: row;
     margin: 2vw;
     border-style: solid;
-    border-width: 3px 1px 3px 1px;
+    border-width: 3px 0.1vw 3px 0.1vw;
     border-top-color: #b0895a;
     border-bottom-color: #b0895a;
     background: rgba(176, 137, 90, .5);
@@ -87,7 +87,7 @@ input {
     grid-auto-flow: column;
     margin: 2vw;
     border-style: solid;
-    border-width: 3px 1px 3px 1px;
+    border-width: 3px 0.1vw 3px 0.1vw;
     border-top-color: #b0895a;
     border-bottom-color: #b0895a;
     background: rgba(176, 137, 90, .5);
@@ -135,7 +135,7 @@ input {
     grid-template-columns: 45vw;
     margin: 2vw 26vw 2vw 26vw;
     border-style: solid;
-    border-width: 3px 1px 3px 1px;
+    border-width: 3px 0.1vw 3px 0.1vw;
     border-top-color: #b0895a;
     border-bottom-color: #b0895a;
     background: rgba(176, 137, 90, .5);
